manage merge main