@@ -6,7 +6,7 @@ import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.TestFactory;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.stream.Stream;
 
 @Tag("non-regression")
@@ -17,8 +17,8 @@ public class LcsNonRegressionTests {
     @TestFactory
     public Stream<DynamicTest> nonRegressionMisp() {
         var supplier =
-                new LCSTestDataSupplier(Paths.get("src", "test", "resources", "Non-Regression",
-                        "LCS").toString());
+                new LCSTestDataSupplier(Path.of("src", "test", "resources", "Non-Regression",
+                        "LCS"));
         var bench = new NonRegressionTestBench<>(supplier);
         return bench.generateTests();
     }
